api.css
/**
 * @file
 * CSS for the API module.
 */

/* PHP code */
.php {
  overflow: auto;
}
.php .php-comment {
  color: #666;
}
.php .php-function-or-constant {
  color: #00a;
}
.php .php-function-or-constant a.local {
  color: #00a;
  font-weight: bold;
}
.php .php-function-or-constant a.php-manual {
  color: #048;
  font-weight: bold;
}
.php .php-variable {
  color: #330;
}
.php .php-string {
  color: #a00;
}
.php .php-constant {
  color: #a33;
}
.php .php-keyword {
  color: #060;
}

td.line-numbers {
    color: #666666;
    text-align: right;
}

/* Function signature */
#api-function-signature td,
#api-function-signature td a,
#api-function-signature td a:visited {
  color: #9d9d93;
}
#api-function-signature tr.active td.branch {
  font-weight: bold;
}
#api-function-signature tr.active td,
#api-function-signature tr.active td a,
#api-function-signature tr.active td a:visited {
  color: #000000;
}
#api-function-signature th,
#api-function-signature td {
  background: #fff;
  padding: 0.2em;
}
#api-function-signature td code {
  background: #fff;
}
#api-function-signature td.signature {
  font-size: 1.2em;
}
#api-function-signature .branch {
  padding-left: 2em;
  text-align: right;
  white-space: nowrap;
}
#api-function-signature th {
  font-size: 0.6944em;
  font-weight: normal;
}
#api-function-signature td.signature {
  width: 100%;
}
#api-function-signature del {
  text-decoration: none;
  color: #9e8353;
}
#api-function-signature ins {
  text-decoration: none;
  color: #456500;
}

/* Search block- make the text field the correct width */
#api-search-form #edit-search-wrapper,
#api-search-form-1 #edit-search-1-wrapper {
  display: inline;
}
#api-search-form #edit-search,
#api-search-form-1 #edit-search-1 {
  width: 115px;
}
#api-search-form #autocomplete,
#api-search-form-1 #autocomplete-1 {
  width: 250px !important;
}

/* Other styles */
.api-defined {
  color: #9d9d93;
  font-size: 0.8333em;
}

.api-inheritance-source {
  float:right;
}

#api-alternatives,
#api-alternatives li {
  margin: 0;
  padding: 0;
}
#api-alternatives,
#api-alternatives ol {
  list-style: none;
}
#api-alternatives strong {
  float: left;
  clear: left;
}
#api-alternatives ol li {
  display: inline;
  padding-left: 1em;
}

